--- a/templates/rah/search.html
+++ b/templates/rah/search.html
@@ -1,11 +1,11 @@
 {% extends "rah/base.html" %}
 {% block content %}
 <h1>Search Repower@Home</h1>
-<div id="cse-search-results"></div>
+<div id="cse_search_results"></div>
 <script type="text/javascript">
-    var googleSearchIframeName = "cse-search-results";
-    var googleSearchFormName = "cse-search-box";
-    var googleSearchFrameWidth = 600;
+    var googleSearchIframeName = "cse_search_results";
+    var googleSearchFormName = "cse_search_box";
+    var googleSearchFrameWidth = 500;
     var googleSearchDomain = "www.google.com";
     var googleSearchPath = "/cse";
 </script>
