Adding pages for privacy policy and terms of use. Edited footer in preparation for legal review

--- a/templates/base.html
+++ b/templates/base.html
@@ -76,15 +76,9 @@
 	                    <a href="http://www.climateprotect.org/">The Alliance for Climate Protection</a> | 
 	                    <a href="http://www.climateprotectionactionfund.org/">Climate Protection Action Fund</a> | 
 	                    <a href="{% url rah.views.feedback %}" class="feedback_link">Feedback</a> | 
-	                    <a href="http://www.repoweramerica.org/terms-of-use">Terms of Use</a> | 
-	                    <a href="http://www.repoweramerica.org/privacy-policy">Privacy Policy</a>
-	                </p>
-	                <p>
-	                    The Repower America Web site is shared by the Alliance for Climate Protection and the 
-	                    Climate Protection Action Fund.<br/>
-	                    <a href="/about/learn-more-about-repower-america/">Learn more</a> about the distinction 
-	                    between the efforts of these two organizations through Repower America.
-	                </p>					
+	                    <a href="{% url terms_of_use %}">Terms of Use</a> | 
+	                    <a href="{% url privacy_policy %}">Privacy Policy</a>
+	                </p>				
 				</div>
             </div>
         </div>
