--- a/templates/rah/home_logged_out.html
+++ b/templates/rah/home_logged_out.html
@@ -8,4 +8,5 @@
 {% block minorcol %}
 	<h2>Get started</h2>
 	<p>Gain full access to Repower at Home's features. It's free!</p>
+	<p><a href="{% url register %}" title="">Create your account</a></p>
 {% endblock %}
