--- a/static/css/style.css
+++ b/static/css/style.css
@@ -146,6 +146,12 @@ acronym {
     font-size: 13px;
     border: none;
 }
+ul{
+    color: #333; 
+    margin-left: 10px;
+    padding-left: 10px;
+    padding-bottom: 15px;
+}
 
 #loading {
     position: fixed;
