added a new model to groups, DiscussionBlacklist, this is used to keep track of users who do not wish to receive emails for group discussions

--- a/groups/templates/groups/group_edit.html
+++ b/groups/templates/groups/group_edit.html
@@ -28,6 +28,7 @@
                 {% csrf_token %}
             </form>
         </div>
+    </div>
 {% endblock %}
 {% block minorcol %}
     {% if requesters %}
