--- a/groups/templates/groups/_membership_form.html
+++ b/groups/templates/groups/_membership_form.html
@@ -5,7 +5,7 @@
     {{ form.role }}
     <input type="submit" name="change_membership" value="Submit"></input>
 </p>
-<p>
+<div>
     {% for error in form.memberships.errors %}
         <span class="error">{{ error|escape }}</span>
     {% endfor %}
@@ -29,4 +29,4 @@
             {% endfor %}
         </tbody>
     </table>
-<p>
+</div>
