added a group notifications tab to the edit profile page, there a user can choose to turn off notifications for group discussions

--- a/templates/rah/profile_edit.html
+++ b/templates/rah/profile_edit.html
@@ -1,23 +1,37 @@
 {% extends "rah/base.html" %}
 {% block content %}
     <h1>Edit your Profile</h1>
-    <p>
-        <a href="http://en.gravatar.com/">Change your image on gravatar.com</a><br/>
-        <a href="{% url password_change %}">Change your password</a><br/>
-        {% if profile.twitter_access_token %}
-            Your account is linked with twitter (<a href="{% url twitter_oauth_unauth %}">unlink</a>)
-        {% else %}
-            <a id="link_with_twitter" href="{% url twitter_oauth_auth %}">Link your account with twitter</a>
-        {% endif %}
-    </p>
-    <form action="" method="post" id="profile_edit_form">
-        <div>
-            {{account_form.as_p}}
-            {{profile_form.as_p}}
-            <input type="submit" value="Save profile" />
-            <input type="hidden" name="next" value="{{ next|escape }}" />
-            {% csrf_token %}
+    <div id="profile_edit_tabs">
+        <ul>
+            <li><a href="#account_tab">Account</a></li>
+            <li><a href="#notifications_tab">Notifications</a></li>
+        </ul>
+        <div id="account_tab">
+            <p>
+                <a href="http://en.gravatar.com/">Change your image on gravatar.com</a><br/>
+                <a href="{% url password_change %}">Change your password</a><br/>
+                {% if profile.twitter_access_token %}
+                    Your account is linked with twitter (<a href="{% url twitter_oauth_unauth %}">unlink</a>)
+                {% else %}
+                    <a id="link_with_twitter" href="{% url twitter_oauth_auth %}">Link your account with twitter</a>
+                {% endif %}
+            </p>
+            <form action="" method="post" id="profile_edit_form">
+                <div>
+                    {{account_form.as_p}}
+                    {{profile_form.as_p}}
+                    <input type="submit" name="edit_account" value="Save profile" />
+                    {% csrf_token %}
+                </div>
+            </form>
         </div>
-    </form>
+        <div id="notifications_tab">
+            <form id="group_notifications_form" action="" method="post">
+                {{ group_notification_form.as_p }}
+                <input type="submit" name="edit_group_notifications" value="Save notifications" />
+                {% csrf_token %}
+            </form>
+        </div>
+    </div>
 {% endblock %}
 {% block js %}page_profile_edit{% endblock %}
