--- a/groups/templates/groups/_group_header.html
+++ b/groups/templates/groups/_group_header.html
@@ -17,5 +17,5 @@
 {% endfor %}
 <p class="group_description">{{ group.description }}</p>
 <div class="membership_type">
-    Group Type: {% if group.is_public %}Public{% else %}Private{% endif %}
+    Group Membership: {% if group.is_public %}Open{% else %}Closed{% endif %}
 </div>
