first re factor of the actions, mostly just deleted the concept of action tasks and made models for the 'yet to come' action forms

--- a/actions/templates/actions/action_show.html
+++ b/actions/templates/actions/action_show.html
@@ -9,9 +9,9 @@
             Actions
         {% endif %}
     </div>
-    <div id="action_show">    
+    <div id="action_show">
         {% for action in actions %}
-            {% include 'rah/_action_nugget.html' %}
+            {% include 'actions/_action_nugget.html' %}
             <br class='spacer' />
         {% endfor %}
     </div>
