--- a/templates/base.html
+++ b/templates/base.html
@@ -45,8 +45,8 @@
                     </div>
                 </form>
                 <div id="nav">
-                    <a href="{% url rah.views.index %}">Home</a> |
-                    <a href="{% url rah.views.action_show %}">Actions</a> |
+                    <a href="{% url index %}">Home</a> |
+                    <a href="{% url action_show %}">Actions</a> |
                     <a href="{% url group_list %}">Groups</a> |
                     <a href="{% url blog_index %}">Blog</a>
                     {# <a href="">About us</a> #}
