--- a/templates/records/action_complete.html
+++ b/templates/records/action_complete.html
@@ -1,6 +1,6 @@
 {% extends "records/base.html" %}
 {% block activity_item %}
     {% safe_user_link record.user %} completed 
-    <a href="{% url action_detail content_object.action.slug %}">{{ content_object.name }}</a> 
+    <a href="{% url action_detail content_object.slug %}">{{ content_object.name }}</a> 
     on {{ record.created|date:"M j, Y" }}{% if record.points %} (+{{ record.points }} points){% endif %}
 {% endblock %}
