--- a/groups/templates/groups/_group_search_result.html
+++ b/groups/templates/groups/_group_search_result.html
@@ -1,12 +1,13 @@
 {% load thumbnail %}
 
 <img class="group_image" src="{% thumbnail object.safe_image 30x30 crop='smart' %}" alt="group image" height="30" width="30" />
-<h6><a href="{{ object.get_absolute_url }}">{{ object.name }}</a></h6>
-{% for parent in object.parents %}
-    <span class="group_parent"><a href="{{ parent.get_absolute_url }}">{{ parent.name }}</a>
-        {% if not forloop.last %}
-            >
-        {% endif %}
-    </span>
-{% endfor %}
+<div class="group_details">
+    <h6><a href="{{ object.get_absolute_url }}">{{ object.name }}</a></h6>
+    {% for parent in object.parents %}
+        <span class="group_parent">
+            <a href="{{ parent.get_absolute_url }}">{{ parent.name }}</a>
+            {% if not forloop.last %}&gt;{% endif %}
+        </span>
+    {% endfor %}
+</div>
 <br class="spacer" />
