--- a/groups/templates/groups/group_edit.html
+++ b/groups/templates/groups/group_edit.html
@@ -4,6 +4,7 @@
         <ul>
             <li><a href="#group_tab">Group</a></li>
             <li><a href="#members_tab">Members</a></li>
+			<li><a href="#discussions_tab">Discussions</a></li>
         </ul>
         <div id="group_tab">
             <form id="group_form" action="" method="post" enctype="multipart/form-data">
@@ -28,6 +29,13 @@
                 {% csrf_token %}
             </form>
         </div>
+		<div id="discussions_tab">
+			<form action="" method="post">
+				{{discussions_form.as_p}}
+				<p><input type="submit" name="discussion_settings" value="Save Discussion Settings"></input></p>
+				{% csrf_token %}
+			</form>
+		</div>
     </div>
 {% endblock %}
 {% block minorcol %}
