--- a/actions/templates/actions/action_detail.html
+++ b/actions/templates/actions/action_detail.html
@@ -38,8 +38,10 @@
     {% endif %}
     <h2>Action Tools</h2>
     <p>
-        {% if request.user.is_authenticated and not progress.date_committed %}
-            <a href="#" class="commit_trigger">Make a Commitment</a><br/>
+        {% if request.user.is_authenticated %}
+            {% if not progress.date_committed and not progress.is_completed %}
+                <a href="#" class="commit_trigger">Make a Commitment</a><br/>
+            {% endif %}
         {% endif %}
         <a href="{% url feedback %}" class="feedback_link">Feedback</a>
     </p>
