--- a/groups/templates/groups/group_detail.html
+++ b/groups/templates/groups/group_detail.html
@@ -61,7 +61,18 @@
             </tbody>
         </table>
     </div>
-    
+
+    <div id="group_discussion_list" class="group_section">
+    	<h2>Discussions</h2>
+		<a href="{% url group_disc_create group.slug %}">Start new discussion</a> | 
+		<a href="{% url group_disc_list group.slug %}">See all discussions</a>
+		{% for disc in discs %}
+			<h3><a href="{% url group_disc_detail group.slug,disc.id %}">{{disc.subject}}</a></h3>
+			<div>Posted by {{disc.user}} on {{disc.created}}</div>
+			<br/>
+		{% endfor %}
+    </div>
+
     <div id="group_activity" class="group_section">
         {% if group_records %}
             <h2>Group Activity
