--- a/groups/templates/groups/group_disc_create.html
+++ b/groups/templates/groups/group_disc_create.html
@@ -1,11 +1,7 @@
 {% extends "rah/base.html" %}
 
 {% block content %}
-<form action="" method="post" accept-charset="utf-8">
-	{{form.as_p}}
-	<p><input type="submit" value="Start discussion"/></p>
-	{% csrf_token %}
-</form>
+	{% include "groups/_group_disc_create_form.html" %}
 {% endblock %}
 {% block minorcol %}
 {% endblock %}
