--- a/groups/templates/groups/group_disc_list.html
+++ b/groups/templates/groups/group_disc_list.html
@@ -1,12 +1,7 @@
 {% extends "rah/base.html" %}
-
+{% load comments %}
 {% block content %}
-{% for disc in discs %}
-	<h2><a href="{% url group_disc_detail group.slug,disc.id %}">{{disc.subject}}</a></h2>
-	<div>Posted by {{disc.user}} on {{disc.created}}</div>
-	<br/>
-{% endfor %}
+	{% include "groups/_group_disc_list.html" %}
 {% endblock %}
-{% block minorcol %}
-{% endblock %}
+{% block minorcol %}{% endblock %}
 {% block js %}{% endblock %}
