--- a/groups/templates/groups/group_disc_detail.html
+++ b/groups/templates/groups/group_disc_detail.html
@@ -1,24 +1,17 @@
 {% extends "rah/base.html" %}
 {% block content %}
 <h2>{{disc.subject}}</h2>
-<div>
-	{{disc.body|linebreaks}}
-</div>
-<div>
-	Posted by {{disc.user}} on {{disc.created}}
-</div>
-<br/>
+{% include "groups/_group_disc_nugget.html" %}
 {% for disc in discs %}
-	<div>
-		{{disc.body|linebreaks}}
-	</div>
-	<div>
-		<i>--Posted by {{disc.user}} on {{disc.created}}</i>
-	</div>
-	<br/>
+	{% include "groups/_group_disc_nugget.html" %}
 {% endfor %}
 {% if is_poster %}
 	{% include "groups/_group_disc_create_form.html" %}
+{% else %}
+	{% if group.is_joinable %}
+		You must be a member of this group to post discussions. 
+		<a href="{% url group_join group.id %}">Join this Group.</a>
+	{% endif %}
 {% endif %}
 
 {% endblock %}
