--- a/groups/templates/groups/_group_disc_list.html
+++ b/groups/templates/groups/_group_disc_list.html
@@ -1,4 +1,5 @@
 {% for disc in discs %}
+{% if disc.is_public or is_manager or disc.user.id == user.id %}
 	<h2><a href="{% url group_disc_detail group.slug,disc.id %}">{{disc.subject}}</a></h2>
 	<div>Posted by {{disc.user}} on {{disc.created}}</div>
 	<div>
@@ -13,4 +14,5 @@
 		{% endif %}
 	</div>
 	<br/>
+{% endif %}
 {% endfor %}
