--- a/groups/templates/groups/_group_disc_nugget.html
+++ b/groups/templates/groups/_group_disc_nugget.html
@@ -1,4 +1,4 @@
-<div class="group_disc_reply {% if disc.is_public or is_manager or disc.user.id == user.id %}unapproved{% endif %}">
+<div class="group_disc_reply {% if not disc.is_public %}unapproved{% endif %}">
 	{% if disc.is_public or is_manager or disc.user.id == user.id %}
 		{{disc.body|linebreaks}}
 		<i>--Posted by {{disc.user.get_full_name}} on {{disc.created}}</i>
