action forms can now be persisted by posting to the save_action_form url

--- a/actions/templates/actions/vampire_power/_vampire_worksheet_forms.html
+++ b/actions/templates/actions/vampire_power/_vampire_worksheet_forms.html
@@ -1,4 +1,5 @@
-<form id="vampire_worksheet_form" action="" method="post">
+<form id="vampire_worksheet_form" method="post"
+    action="{% url save_action_from action.slug 'VampirePowerWorksheetForm' %}">
     <ul id="vampire_worksheet_wizard_nav">
         <li><a id="t0" href="#get_started"></a></li>
         <li><a id="t1" href="#television">1</a></li>
@@ -33,6 +34,7 @@
             </li>
         </ul>
     </div>
+    {% csrf_token %}
 </form>
 <script>
     var rich_action_name = "vampire_power";
