save_action_form view now just "updates" the existing data with the new data passed in, this is convenient as it allows partial forms to be submitted, thus preserving existing data. Now each vampire partial slay field in wrapped in its own form, so we can add complete and commit forms to the planning page without having nested forms

--- a/actions/templates/actions/vampire_power/_cell_phone.html
+++ b/actions/templates/actions/vampire_power/_cell_phone.html
@@ -1,2 +1,4 @@
 <img src="not_here.jpg" alt="cell phone charger" />
-{{ vampire_worksheet_form.cell_phone }}
+<form method="post" action="{% url save_action_from action.slug 'VampirePowerWorksheetForm' %}">
+    {{ vampire_worksheet_form.cell_phone }}
+</form>
