--- a/actions/templates/actions/vampire_power/_game_system.html
+++ b/actions/templates/actions/vampire_power/_game_system.html
@@ -1,2 +1,4 @@
 <img src="not_here.jpg" alt="NES" />
-{{ vampire_worksheet_form.game_system }}
+<form method="post" action="{% url save_action_from action.slug 'VampirePowerWorksheetForm' %}">
+    {{ vampire_worksheet_form.game_system }}
+</form>
