--- a/actions/templates/actions/vampire_power/_monitor.html
+++ b/actions/templates/actions/vampire_power/_monitor.html
@@ -1,2 +1,4 @@
 <img src="not_here.jpg" alt="computer monitor" />
-{{ vampire_worksheet_form.monitor }}
+<form method="post" action="{% url save_action_from action.slug 'VampirePowerWorksheetForm' %}">
+    {{ vampire_worksheet_form.monitor }}
+</form>
